fix: make last coins bigger on mobile

--- a/style.scss
+++ b/style.scss
@@ -334,7 +334,7 @@ a {
         display: none;
     }
     .coin-5 {
-        width: 50vw;
+        width: 55vw;
     }
 }
 
